--- a/index.html
+++ b/index.html
@@ -3,42 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HairBot</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <title>HairBot - Agilidade com o Cabelo</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <header class="bg-light py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1 class="display-4 text-pink">HAIRBOT</h1>
-                    <p class="lead text-pink">AGILIDADE COM O CABELO</p>
-                </div>
-                <div class="col-md-6 text-end">
-                    <button class="btn btn-outline-pink" type="button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5  0 0 1-.5-.5z"/>
-                        </svg>
-                    </button>
-                </div>
+
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="https://i.imgur.com/8u10V61.png" width="120" height="30" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sobre Nós</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Serviços</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contato</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1 class="display-4">Bem vindo!</h1>
+                <p class="lead">Comece agora mesmo a explorar nosso app e descubra todas as finalizações que nosso robô pode te proporcionar!</p>
+                <a href="#" class="btn btn-primary btn-lg">Adquira já o seu!</a>
+            </div> </div>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="display-5">O que é o HairBot?</h2>
+                <p class="lead">O HairBot é um robô que ajuda você a encontrar a finalização certa para o seu cabelo!</p>
+                <p class="lead">Com o HairBot, você pode escolher entre diversas opções de finalizações e encontrar a que mais combina com o seu estilo!</p>
+            </div>
+            <div class="col-md-6">
+                <img src="https://i.imgur.com/8u10V61.png" width="100%" height="100%" class="img-fluid" alt="HairBot">
             </div>
         </div>
-    </header>
-    <main class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="https://storage.googleapis.com/a1aa/image/1nb9EhoFV2YRPRTYIDlH5CEmEbtf9snjr7izFntQacvfWGpTA.jpg" alt="HairBot" class="img-fluid">
-                </div>
-                <div class="col-md-6">
-                    <h2 class="display-5">O QUE É O HAIRBOT?</h2>
-                    <p class="lead">O HairBot é um assistente virtual que ajuda a encontrar o melhor estilo de cabelo para você.</p>
-                    <button class="btn btn-pink" type="button">COMEÇAR</button>
-                </div>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://i.imgur.com/8u10V61.png" width="100%" height="100%" class="img-fluid" alt="HairBot">
+            </div>
+            <div class="col-md-6">
+                <h2 class="display-5">Como funciona?</h2>
+                <p class="lead">O HairBot funciona de forma simples e fácil!</p>
+                <p class="lead">Basta escolher a opção de finalização que você deseja e o HairBot irá te mostrar como fazer!</p>
             </div>
         </div>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-4fmsicfjx1peyjzF3WOy6QS48qF2AZb965XftxEzbvk8P3J6z55tJAxiG54MOQ" crossorigin="anonymous"></script>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="display-5">Quer saber mais?</h2>
+                <p class="lead">Entre em contato conosco e saiba mais sobre o HairBot!</p>
+                <a href="#" class="btn btn-primary btn-lg">Contato</a>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
