--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header>
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Hairbot</a>
-              <p class="navbar-brand" href="#">Agilidade com o cabelo</p>
+              <a class="navbar-brand" href="#" style="color: #FE85CD;">Hairbot</a>
+              <p class="navbar-brand" href="#" style="color: #FE85CD;">Agilidade com o cabelo</p>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
