--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
             </div>
           </nav>
     </header>
+
     
     <footer>
+        <div class="quad">
         <p>HairBot © 2024. Todos os direitos reservados</p>
+        </div>
     </footer>
     
 </body>
