--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
           </div>
         </div>
       </nav>
-      <footer>
-        
-      </footer>
+      <footer class="footer mt-5 py-3 bg-dark text-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p>HairBot © 2024. Todos os direitos reservados.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
