--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
               </li>
             </ul>
           </div>
-        </div>
+ </div>
       </nav>
+      <main>
+      </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
             <div class="row">
