--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hairbot</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -32,9 +33,9 @@
               </li>
             </ul>
           </div>
- </div>
       </nav>
       <main>
+          <!-- Conteúdo principal da página -->
       </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
