--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -31,6 +31,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/sobre-nos.html">Sobre Nós</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/cadastro.html">Cadastre-se</a>
+              </li>
             </ul>
           </div>
       </nav>
