--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hairbot</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -30,6 +30,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/sobre-nos.html">Sobre Nós</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/cadastro.html">Cadastre-se</a>
               </li>
             </ul>
           </div>
