--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -38,7 +38,12 @@
           </div>
       </nav>
       <main>
-          <!-- Conteúdo principal da página -->
+        <div class="quad">
+            
+        </div>  
+
+
+
       </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
