--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -39,7 +39,9 @@
       </nav>
       <main>
         <div class="quad">
-            
+            <p>Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
+                 Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
+                  nos trazendo uma vida facilitada.</p>
         </div>  
 
 
