--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -38,7 +38,7 @@
           </div>
       </nav>
       <main>
-        <div class="quad">
+        <div class="quad" style="border-radius: 15px;">
             <p style="font-size: large;">Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
                  Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
                   nos trazendo uma vida facilitada.</p>
