--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p>HairBot © 2024. Todos os direitos reservados.</p>
+                    <p class="m-0">HairBot © 2024. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
