--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -38,14 +38,15 @@
           </div>
       </nav>
       <main>
-        <div class="quad" style="border-radius: 15px;">
-            <p style="font-size: large;">Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
-                 Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
-                  nos trazendo uma vida facilitada.</p>
-        </div>  
-
-
-
+        <div class="container">
+          <div class="card border-solid border-rounded">
+              <p class="p-2 m-2">
+                Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
+                Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
+                nos trazendo uma vida facilitada.
+              </p>
+          </div>  
+        </div>
       </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
