--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -39,7 +39,7 @@
       </nav>
       <main>
         <div class="container" style="margin-top: 20px;">
-          <div class="card border-solid border-rounded">
+          <div class="card border-solid border-rounded w-75 m-auto">
               <p class="p-2 m-2">
                 Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
                 Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
