--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -39,7 +39,7 @@
       </nav>
       <main>
         <div class="container mt-5">
-          <div class="card border-solid border-rounded w-75 m-uto">
+          <div class="card border-solid border-rounded w-75 m-auto">
               <p class="p-2 m-2">
                 Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
                 Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
