--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -41,9 +41,11 @@
         <div class="container mt-2">
           <div class="card border-solid border-rounded w-75 m-auto">
               <p class="p-2 m-2">
-                Nossa empresa vem ao mercado visando trazer praticidade ao mundo.
-                Acreditamos em um futuro mundo em que as máquinas trabalham para nós,
-                nos trazendo uma vida facilitada.
+                Nossa empresa surge no mercado com o propósito de trazer praticidade e inovação ao cotidiano das pessoas. 
+                Acreditamos em um futuro onde a tecnologia e as máquinas trabalham em harmonia conosco, proporcionando uma vida mais facilitada e eficiente.
+                Em um mundo em constante transformação, e nossa missão é estar à frente dessas mudanças, oferecendo soluções que simplificam tarefas diárias e elevam a experiência de vida.
+                Com o nosso robô finalizador de cabelo, não apenas otimizará o tempo, mas também garantirá resultados de qualidade profissional, sem a necessidade de visitas frequentes ao salão.
+                Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes. Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
               </p>
           </div>  
         </div>
