--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -6,14 +6,14 @@
     <title>Hairbot</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="./img/HAIRBOT.png" alt="Logo" width="225" height="85" class="d-inline-block align-text-top">
+                <img src="./img/hairbot.png" alt="Logo" width="225" height="85" class="d-inline-block align-text-top">
               </a>
             </div>
           </nav>
@@ -38,8 +38,9 @@
           </div>
       </nav>
       <main>
-        <div class="container mt-2">
-          <div class="card border-solid border-rounded w-75 m-auto">
+        <div class="container mt-2 w-75">
+          <h2 class="underline-pink">Sobre Nós</h2>
+          <div class="card border-solid border-rounded m-auto">
               <p class="p-2 m-2">
                 Nossa empresa surge no mercado com o propósito de trazer praticidade e inovação ao cotidiano das pessoas. 
                 Acreditamos em um futuro onde a tecnologia e as máquinas trabalham em harmonia conosco, proporcionando uma vida mais facilitada e eficiente.
