--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -47,9 +47,19 @@
                 Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes. Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
               </p>
           </div>  
+          <div class="row align-items-center mt-5">
+            <div class="col-md-2">
+              <img src="./img/hairbot.png" alt="Hairbot Logo" class="img-fluid">
+            </div>
+            <div class="col-md-3">
+              <p class="mb-0">SAC</p>
+              <p class="mb-0">0800-339-500</p>
+              <p class="mb-0">hairbot.cia@yahoo.com</p>
+            </div>
+          </div>
         </div>
       </main>
-      <footer class="footer mt-5 py-3 bg-dark text-light">
+      <footer class="footer mt-2 py-3 bg-dark text-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
