--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,7 +38,19 @@
           </div>
       </nav>
       <main>
-          <!-- Conteúdo principal da página -->
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
