--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -49,7 +49,7 @@
           </div>  
           <div class="row align-items-center mt-5">
             <div class="col-md-2">
-              <img src="./img/hairbot.png" alt="Hairbot Logo" class="img-fluid">
+              <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid">
             </div>
             <div class="col-md-3">
               <p class="mb-0">SAC</p>
