--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,9 +38,27 @@
           </div>
       </nav>
       <main>
-        <div class="container">
+        <div class="container mt-5">
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 mb-5">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 mb-5">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 mb-5">
               <div class="card" style="width: 18rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
@@ -79,7 +97,7 @@
           </div>
         </div>
       </main>
-      <footer class="footer mt-5 py-3 bg-dark text-light">
+      <footer class="footer py-3 bg-dark text-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
