--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -45,7 +45,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
@@ -54,7 +54,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
@@ -63,7 +63,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
@@ -72,7 +72,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
@@ -81,7 +81,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
@@ -90,7 +90,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
             </div>
