--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-4">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="blob:https://web.whatsapp.com/185a1078-f20f-4307-95f4-f7e52bf2bd96" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
