--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -42,7 +42,7 @@
           <div class="row">
             <div class="col-4 mb-5">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-4 mb-5">
               <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-5.jpeg" class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
@@ -59,6 +59,15 @@
               </div>
             </div>
             <div class="col-4 mb-5">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-3.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -69,7 +78,7 @@
             </div>
             <div class="col-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-1.jpeg" class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-5.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
@@ -78,16 +87,7 @@
             </div>
             <div class="col-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-2.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <a href="#" class="btn btn-pink">Quero Esse!</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-4">
-              <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-3.jpeg" class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-6.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
