--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -39,6 +39,7 @@
       </nav>
       <main>
         <div class="container mt-5">
+          <h2 class="underline-pink">Sobre Nós</h2>
           <div class="row">
             <div class="col-4 mb-5">
               <div class="card" style="width: 18rem;">
