--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,7 +38,7 @@
           </div>
       </nav>
       <main>
-        <h2 class="underline-pink">Finalizações</h2>
+        <h1 class="titulo">Finalizações</h2>
         <div class="container mt-5">
           <div class="row">
             <div class="col-4 mb-5">
