--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -47,7 +47,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Amassado</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -56,7 +56,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Tesourinha</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -74,7 +74,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-4.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Dedoliss</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -83,7 +83,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-5.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Fitagem</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -92,7 +92,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-6.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Babyliss</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
