--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -65,7 +65,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Escova</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
