--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -74,7 +74,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-4.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Dedoliss</h5>
+                  <h5 class="card-title">Fitagem</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
