--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -41,10 +41,11 @@
         <div class="container mt-2 w-75">
           <h2 class="underline-pink">Sobre Nós</h2>
           <div class="card border-solid border-rounded m-auto">
-              <p class="p-2 m-2 text-justify">
+              <p class="p-2 m-2">
                 Em um mundo em constante transformação, e nossa missão é estar à frente dessas mudanças, oferecendo soluções que simplificam tarefas diárias e elevam a experiência de vida.
                 Com o nosso robô finalizador de cabelo, não apenas otimizará o tempo, mas também garantirá resultados de qualidade profissional, sem a necessidade de visitas frequentes ao salão.
-                Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes. Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
+                <br>Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes.
+                Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
               </p>
           </div>  
           <div class="row align-items-center mt-5">
