--- a/_cadastro.html
+++ b/_cadastro.html
@@ -8,7 +8,7 @@
       </div>
       <div class="modal-body">
         Aqui está o conteúdo do formulário de cadastro.
-        <form action="https://formspree.io/f/movqvwzz">
+        <form action="https://formspree.io/f/movqvwzz" method="post">
           <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
             <input type="text" class="form-control" id="nome">
