--- a/_cadastro.html
+++ b/_cadastro.html
@@ -3,30 +3,30 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastro</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre-se</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Aqui está o conteúdo do formulário de cadastro.
-        <form action="https://formspree.io/f/movqvwzz" method="post">
+        Registre-se e compre seu robo com desconto
+        <form action="https://formspree.io/f/movqvwzz" method="POST">
           <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="nome">
+            <input type="text" class="form-control" id="nome" name="nome">
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email">
+            <input type="email" class="form-control" id="email" name="email">
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password" name="password">
           </div>
           <!-- Adicione mais campos conforme necessário -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-        <button type="submit" class="btn btn-primary">Enviar</button>
       </div>
     </div>
   </div>
