--- a/_cadastro.html
+++ b/_cadastro.html
@@ -8,7 +8,7 @@
       </div>
       <div class="modal-body">
         Registre-se e compre seu robo com desconto
-        <form action="https://formspree.io/f/movqvwzz" method="POST">
+        <form action="https://formspree.io/f/xdkokdzg" method="POST">
           <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
             <input type="text" class="form-control" id="nome" name="nome">
