--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -32,7 +32,11 @@
                 <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link ms-2" href="/cadastro.html">Cadastre-se</a>
+                <a class="nav-link ms-2" href="#">
+                  <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModalFinalizacoes">
+                    Cadastre-se
+                  </button>
+                </a>
               </li>
             </ul>
           </div>
@@ -98,7 +102,68 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
+        <div class="text-center">
+          <h1 class="titulo">Penteados</h1>
+        </div>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Amassado</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Tesourinha</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Escova</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Dedoliss</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-5.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Fitagem</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-6.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Babyliss</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>              
       </main>   
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
@@ -110,5 +175,14 @@
         </div>
     </footer>
 </body>
+<script>
+  fetch('_cadastro.html')
+    .then(response => response.text())
+    .then(data => {
+        let modalContent = data.replace(/exampleModal/g, 'exampleModalFinalizacoes');
+        document.getElementById('modal-container').innerHTML = modalContent;
+    });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 </html>
