--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -32,7 +32,11 @@
                 <a class="nav-link ms-2 active" aria-current="page" href="/sobre-nos.html">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link ms-2" href="/cadastro.html">Cadastre-se</a>
+                <a class="nav-link ms-2" href="#">
+                  <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModalSobre">
+                    Cadastre-se
+                  </button>
+                </a>
               </li>
             </ul>
           </div>
@@ -71,10 +75,12 @@
     </footer>
 </body>
 <script>
-  fetch('modal.html')
+  fetch('_cadastro.html')
     .then(response => response.text())
     .then(data => {
-        document.getElementById('modal-container').innerHTML = data;
+        // Substituir o ID da modal carregada
+        let modalContent = data.replace(/exampleModal/g, 'exampleModalSobre');
+        document.getElementById('modal-container').innerHTML = modalContent;
     });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
