--- a/_cadastro.html
+++ b/_cadastro.html
@@ -7,7 +7,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Registre-se e compre seu robo com desconto
+        <p>Registre-se e compre seu robo com desconto</p>
+        <br>
         <form action="https://formspree.io/f/xdkokdzg" method="POST">
           <div class="mb-3">
             <label for="nome" class="form-label">Nome</label>
@@ -24,7 +25,7 @@
           <!-- Adicione mais campos conforme necessário -->
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-pink">Enviar</button>
           </div>
         </form>
       </div>
