--- a/index.html
+++ b/index.html
@@ -44,18 +44,15 @@
   <main>
     <div class="container"> 
       <div class="row">
-        <div class="col-6">
+        <div class="col-4">
           <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal2">
             Cadastre-se
           </button>
         </div>
-        <div class="col-6">
+        <div class="col-8">
           <div class="card border-solid border-rounded m-auto">
             <p class="p-2 m-2">
-              Em um mundo em constante transformação, e nossa missão é estar à frente dessas mudanças, oferecendo soluções que simplificam tarefas diárias e elevam a experiência de vida.
-              Com o nosso robô finalizador de cabelo, não apenas otimizará o tempo, mas também garantirá resultados de qualidade profissional, sem a necessidade de visitas frequentes ao salão.
-              <br>Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes.
-              Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
+              HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot, onde praticida
             </p>
         </div>  
         </div>
