--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <p class="p-2 m-2">
               HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot, onde praticida
             </p>
+            <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid">
         </div>  
         </div>
       </div>
