--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
           <div class="text-center">
             <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-              Cadastre-se
+              Adquira o seu!
             </button>
           </div>
         </div>
@@ -76,7 +76,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Envie um email e garanta o seu</p>
+          <p>Envie um email e garanta já o seu</p>
           <form action="https://formspree.io/f/xdkokdzg" method="POST">
             <div class="mb-3">
               <label for="nome" class="form-label">Nome</label>
@@ -89,7 +89,7 @@
             <!-- Adicione mais campos conforme necessário -->
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-pink">Enviar</button>
             </div>
           </form>
         </div>
