--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
           </div>  
         </div>
       </div>
-      <div class="row mt-4">
+      <div class="row mt-5 mb-3">
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
       </div>
     </div>
