--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -103,7 +103,7 @@
           <div class="row">
             <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-11.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Amassado</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-6 col-md-4 d-flex justify-content-center mb-4">
               <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-2.png" class="card-img-top" alt="...">
+                <img src="./img/cabelos/cabelo-12.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Tesourinha</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
@@ -123,7 +123,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-10.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Escova</h5>
+                  <h5 class="card-title">Coque de noiva</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -141,7 +141,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-7.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Fitagem</h5>
+                  <h5 class="card-title">Meio rabo de cavalo</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -150,7 +150,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-8.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Babyliss</h5>
+                  <h5 class="card-title">Rabo de cavalo trançado</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
