--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container"> 
       <div class="row">
         <div class="col-4 text-center"> 
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
-          <div class="text-center">
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75 me-5">
+          <div class="text-center me-5">
             <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
               Adquira o seu!
             </button>
@@ -61,10 +61,10 @@
           <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
+          <img src="./img/good-pontos/robo.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
+          <img src="./img/good-pontos/mulher.png" alt="Longa durabilidade" class="img-fluid my-auto">
         </div>
       </div>
     </div>
