--- a/index.html
+++ b/index.html
@@ -61,17 +61,26 @@
           <div class="flashcard">
             <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid">
             <div class="flashcard-content">
-              <h5>Longa Durabilidade</h5>
+              <h5>Longa durabilidade</h5>
             </div>
           </div>
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/good-pontos/robo.png" alt="Longa durabilidade" class="img-fluid my-auto">
+          <div class="flashcard">
+            <img src="./img/good-pontos/robo.png" alt="Longa durabilidade" class="img-fluid">
+            <div class="flashcard-content">
+              <h5>Agilidade e praticidade</h5>
+            </div>
+          </div>
         </div>
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/good-pontos/mulher.png" alt="Longa durabilidade" class="img-fluid my-auto">
+          <div class="flashcard">
+            <img src="./img/good-pontos/mulher.png" alt="Longa durabilidade" class="img-fluid">
+            <div class="flashcard-content">
+              <h5>Diversas estilizações</h5>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
   </main>
   <footer class="footer mt-5 py-3 bg-dark text-light">
