--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <main>
     <div class="container"> 
       <div class="row">
-        <div class="col-4 text-center"> 
+        <div class="col-md-4 text-center"> 
           <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75 me-5">
           <div class="text-center me-5">
             <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
@@ -48,7 +48,7 @@
             </button>
           </div>
         </div>
-        <div class="col-8 d-flex">
+        <div class="col-md-8 d-flex">
           <div class="card border-solid border-rounded m-auto">
             <p class="p-2 m-2">
               HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot.
